Bug 987605. Call MaybeReflowForInflationScreenWidthChange on SetScrollPositionClampingScrollPortSize instead of SetDisplayPortForElement. r=dbaron

The scroll position clamping scroll port size is more closely related to the screen size then the display port.